--- a/client/src/components/MenuItem/MenuItem.scss
+++ b/client/src/components/MenuItem/MenuItem.scss
@@ -16,6 +16,10 @@
       transform: scale(1.1);
       transition: transform 0.3s ease-in-out;
     }
+
+    .content {
+      opacity: 0.9;
+    }
   }
 
   &.large {
