--- a/client/src/components/CollectionPreview/CollectionPreview.scss
+++ b/client/src/components/CollectionPreview/CollectionPreview.scss
@@ -10,7 +10,57 @@
 
   .preview {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 300px);
+    justify-content: space-between;
+
+    .collection-view-more {
+      width: 100%;
+      height: 350px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px auto;
+      border: 1px solid black;
+      background: rgba(0, 0, 0, 0.05);
+
+      &-icon {
+        height: 40px;
+        width: 40px;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: 0.3s ease-out;
+        opacity: 0.7;
+      }
+
+      &-text {
+        position: relative;
+        top: 80%;
+        opacity: 0;
+        transform: translateY(-50%);
+        transition: 0.3s ease-out;
+      }
+
+      &:hover {
+        .collection-view-more-icon {
+          top: 30%;
+          transition: 0.3s ease-out;
+        }
+
+        .collection-view-more-text {
+          top: 50%;
+          opacity: 0.7;
+          transition: 0.3s ease-out;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .collection-preview {
+    .preview {
+      grid-template-columns: repeat(auto-fill, 250px);
+    }
   }
 }
