add Header component

--- a/client/src/components/CollectionPreview/CollectionPreview.scss
+++ b/client/src/components/CollectionPreview/CollectionPreview.scss
@@ -22,6 +22,7 @@
       margin: 10px auto;
       border: 1px solid black;
       background: rgba(0, 0, 0, 0.05);
+      box-sizing: border-box;
 
       &-icon {
         height: 40px;
