--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -14,10 +14,19 @@
   border: none;
   cursor: pointer;
   transition: 0.3s ease;
+  border: 1px solid black;
 
   &:hover {
     background-color: white;
     color: black;
-    border: 1px solid black;
+  }
+
+  &.google-button {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover {
+      background-color: #357ae8;
+    }
   }
 }
