--- a/client/src/components/SignIn/SignIn.scss
+++ b/client/src/components/SignIn/SignIn.scss
@@ -1,9 +1,14 @@
 .sign-in {
-  width: 33%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 
   &-title {
     margin: 20px 0;
   }
+}
+
+.sign-in-buttons {
+  display: grid;
+  grid-gap: 10px;
 }
