--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -14,6 +14,7 @@
   cursor: pointer;
   transition: 0.3s ease;
   border: 1px solid black;
+  text-align: center;
 
   &:hover {
     background-color: white;
@@ -26,6 +27,18 @@
 
     &:hover {
       background-color: #357ae8;
+    }
+  }
+
+  &.inverted-button {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
     }
   }
 }
