--- a/client/src/components/CartDropdown/CartDropdown.scss
+++ b/client/src/components/CartDropdown/CartDropdown.scss
@@ -27,6 +27,24 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+
+    &::-webkit-scrollbar-track {
+      height: 3px;
+      width: 3px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar {
+      height: 3px;
+      width: 3px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      height: 3px;
+      border-radius: 3px;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
   }
 
   button {
