--- a/client/src/components/CartDropdown/CartDropdown.scss
+++ b/client/src/components/CartDropdown/CartDropdown.scss
@@ -22,6 +22,11 @@
     display: flex;
   }
 
+  .cart-empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
+
   .cart-items {
     height: 240px;
     display: flex;
