--- a/client/src/components/CollectionPreview/CollectionPreview.scss
+++ b/client/src/components/CollectionPreview/CollectionPreview.scss
@@ -10,7 +10,8 @@
 
   .preview {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 25px;
     justify-content: space-between;
 
     .collection-view-more {
@@ -61,7 +62,28 @@
 @media screen and (max-width: 1400px) {
   .collection-preview {
     .preview {
-      grid-template-columns: repeat(auto-fill, 250px);
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .collection-preview {
+    .preview {
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+
+      .collection-view-more {
+        height: 232px;
+
+        &-icon {
+          height: 20px;
+          width: 20px;
+        }
+
+        &-text {
+          font-size: 12px;
+        }
+      }
     }
   }
 }
