--- a/client/src/components/CartDropdown/CartDropdown.scss
+++ b/client/src/components/CartDropdown/CartDropdown.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
   position: absolute;
-  width: 240px;
-  height: 340px;
+  width: 340px;
+  height: 440px;
   flex-direction: column;
   padding: 20px;
   border: 1px solid black;
@@ -28,7 +28,7 @@
   }
 
   .cart-items {
-    height: 240px;
+    height: 85%;
     display: flex;
     flex-direction: column;
     overflow: scroll;
