style component and add stock images

--- a/client/src/components/CollectionPreview/CollectionPreview.scss
+++ b/client/src/components/CollectionPreview/CollectionPreview.scss
@@ -44,6 +44,8 @@
       }
 
       &:hover {
+        cursor: pointer;
+
         .collection-view-more-icon {
           top: 30%;
           transition: 0.3s ease-out;
